--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,15 @@
-name: CI
+name: Simple Push Example
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push] # Запускается при любом push в репозиторий
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  greeting:
+    name: Print greeting
+    runs-on: ubuntu-latest # ОС для выполнения задач
+    
     steps:
-      - name: Checkout репозиторий
-        uses: actions/checkout@v3
-
-      - name: Установить Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Установить зависимости
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Запустить тесты
-        run: |
-          python -m unittest discover
+      - name: Checkout code
+        uses: actions/checkout@v4 # Шаг 1: Получение кода из репозитория
+        
+      - name: Hello World
+        run: echo "🎉 Новый код был запушен в репозиторий! 🚀"
