--- a/.github/workflows/create-branch-task.yml
+++ b/.github/workflows/create-branch-task.yml
@@ -1,26 +1,47 @@
-name: Project Card Reaction
+name: Project Card Moved Action
 
 on:
   project_card:
     types: [moved]
 
 jobs:
-  log-event:
+  track-card-movement:
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      issues: read
-      projects: read
-      
+    
     steps:
-      - name: Log Event Data
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      
+      - name: Get card details
+        id: card-details
         run: |
-          echo "🔄 Карточка перемещена!"
-          echo "Project ID: ${{ github.event.project_card.project_id }}"
-          echo "Column ID: ${{ github.event.project_card.column_id }}"
-          echo "Content URL: ${{ github.event.project_card.content_url }}"
+          echo "::set-output name=card_id::${{ github.event.project_card.id }}"
+          echo "::set-output name=column_id::${{ github.event.project_card.column_id }}"
+          echo "::set-output name=project_url::${{ github.event.project_card.project_url }}"
+          echo "::set-output name=card_url::${{ github.event.project_card.url }}"
+      
+      - name: Get column name
+        id: column-name
+        run: |
+          COLUMN_NAME=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.inertia-preview+json" \
+            "${{ github.event.project_card.column_url }}" | jq -r .name)
+          echo "::set-output name=name::$COLUMN_NAME"
+      
+      - name: Log card movement
+        run: |
+          echo "Карточка с ID ${{ steps.card-details.outputs.card_id }} была перемещена"
+          echo "Перемещена в колонку: ${{ steps.column-name.outputs.name }}"
+          echo "URL колонки: ${{ github.event.project_card.column_url }}"
           
-          # Для отладки: полный JSON события
-          echo "Full event data:"
-          echo '${{ toJSON(github.event) }}' | jq .
+          # Создаем временный файл для логирования (для демонстрации)
+          mkdir -p ./logs
+          echo "Card ${{ steps.card-details.outputs.card_id }} moved to column ${{ steps.column-name.outputs.name }} at $(date)" >> ./logs/card_movements.log
+          
+      - name: Commit and push log (for demonstration)
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add ./logs/card_movements.log
+          git commit -m "Log card movement: ID ${{ steps.card-details.outputs.card_id }} to column ${{ steps.column-name.outputs.name }}" || echo "No changes to commit"
+          git push
