--- a/.github/workflows/track-status-change.yml
+++ b/.github/workflows/track-status-change.yml
@@ -1,19 +1,10 @@
-name: Move card
-
 on:
-  # refer https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows#issues
-  issues:
-    types: [opened, edited, milestoned]
-  # refer https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows#issue_comment
-  issue_comment:
-    types: [created]
-
+  project_card:
+    types: [moved]
+name: Project Card Event
 jobs:
-  build:
+  triage:
+    name: Auto card labeler
     runs-on: ubuntu-latest
     steps:
-      - uses: ineshbose/project-card-action@v1
-        with:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
-          TARGET_COLUMN: 'Review'
+      - uses: technote-space/auto-card-labeler@v2
