Update .gitignore to exclude .idea and __pycache__

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-.idea
+.idea/
+
+__pycache__/
+*.pyc
+
+venv/
+env/
+.venv/
+
+*.log
+*.tmp
+
+.env
+.local
+
+.DS_Store
+Thumbs.db
+
+dist/
+build/
+*.egg-info/
