--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,75 +12,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Install frontend dependencies
-        run: npm ci
-        working-directory: ./frontend
-
-      - name: Run frontend tests
-        id: frontend-tests
-        run: npm test || true
-        working-directory: ./frontend
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Install backend dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-        working-directory: ./backend
-
-      - name: Run backend tests
-        id: backend-tests
-        run: pytest || true
-        working-directory: ./backend
-
-      - name: Determine test status
-        id: test-status
-        run: |
-          FRONTEND_STATUS="${{ steps.frontend-tests.outcome }}"
-          BACKEND_STATUS="${{ steps.backend-tests.outcome }}"
-
-          if [[ "$FRONTEND_STATUS" == "success" && "$BACKEND_STATUS" == "success" ]]; then
-            echo "MESSAGE=✅ Tests passed successfully!\nBranch: ${{ github.ref_name }}\nCommit: ${{ github.sha }}" >> $GITHUB_ENV
-            echo "STATUS=success" >> $GITHUB_ENV
-          else
-            echo "MESSAGE=❌ Tests failed!\nBranch: ${{ github.ref_name }}\nCommit: ${{ github.sha }}\nFrontend: $FRONTEND_STATUS\nBackend: $BACKEND_STATUS" >> $GITHUB_ENV
-            echo "STATUS=failure" >> $GITHUB_ENV
-          fi
-
-      - name: Send Telegram notification
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
-          curl -s -X POST \
-            https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id=${TELEGRAM_CHAT_ID} \
-            -d text="${{ env.MESSAGE }}" \
-            -d parse_mode="Markdown"
-
-    outputs:
-      test_status: ${{ env.STATUS }}
-
-  status:
-    needs: test-and-notify
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-      - name: Check test results
-        run: |
-          if [ "${{ needs.test-and-notify.outputs.test_status }}" != "success" ]; then
-            exit 1
-          fi
+      - name: Print branch name
+        run: echo "Пуш в ветку: ${{ github.ref_name }}"
