--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.9-slim
 
 WORKDIR /app
+
 COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY . .
 
-# Делаем скрипт исполняемым внутри контейнера
-RUN chmod +x entrypoint.sh
+RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["sh", "./entrypoint.sh"]
+COPY app.py .
+
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
