--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,24 @@
-version: '3'
+version: '3.8'
+
 services:
   backend:
-    build: ./backend
-    ports:
-      - "5001:5000"
-    volumes:
-      - ./backend:/app
+    build:
+      context: ./backend
+#    ports:
+#      - "8000:8000"
+    networks:
+      - app-network
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
     ports:
-      - "3000:3000"
+      - "80:80"
+    networks:
+      - app-network
     depends_on:
       - backend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+
+networks:
+  app-network:
+    driver: bridge
