--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,12 @@
-FROM node:22
-WORKDIR /app
-COPY package.json .
-RUN npm install
-COPY . .
-CMD ["npm", "start"]
+FROM nginx:alpine
+
+WORKDIR /usr/share/nginx/html
+
+COPY world-time-city-website.html /usr/share/nginx/html/index.html
+COPY world-time-city-tests.js /usr/share/nginx/html/
+
+COPY nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
