fix feature/test_actions Fix path in package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
   "jest": {
     "testEnvironment": "jsdom",
     "testMatch": [
-      "C:\\Users\\Nick\\Documents\\NIProjects\\messenger-app\\frontend\\world-time-city.test.js"
+      "**/world-time-city.test.js"
     ]
   }
 }
