--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,35 @@ jobs:
         run: npm install
         working-directory: ./frontend
 
+      # Запускаем Jest с выводом отчёта в JSON
       - name: Run Jest tests
         id: frontend-tests
-        run: npx jest --verbose
+        run: npx jest --json --outputFile=jest-results.json --verbose
         working-directory: ./frontend
         continue-on-error: true
+
+      # Отправляем отдельное уведомление в Telegram для каждого теста
+      - name: Send individual Telegram notifications for frontend tests
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          if [ -f jest-results.json ]; then
+            cat jest-results.json | jq -c '.testResults[].assertionResults[]' | while read -r test; do
+              TEST_NAME=$(echo "$test" | jq -r '.fullName')
+              TEST_STATUS=$(echo "$test" | jq -r '.status')
+              MESSAGE="Test: $TEST_NAME\nStatus: $TEST_STATUS"
+              curl -s -X POST \
+                https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+                -d chat_id=${TELEGRAM_CHAT_ID} \
+                -d text="$(echo -e "$MESSAGE")" \
+                -d parse_mode="HTML"
+            done
+          else
+            echo "jest-results.json not found."
+          fi
+        working-directory: ./frontend
+        shell: bash
 
       # Настройка и тестирование бэкенда
       - name: Setup Python
@@ -44,12 +68,11 @@ jobs:
 
       - name: Run backend tests
         id: backend-tests
-        run: |
-          pytest -v
+        run: pytest -v
         working-directory: ./backend
         continue-on-error: true
 
-      # Определяем общий статус тестирования
+      # Определяем общий статус тестирования и формируем итоговое сообщение
       - name: Determine test status
         id: test-status
         run: |
@@ -57,16 +80,16 @@ jobs:
           BACKEND_STATUS="${{ steps.backend-tests.outcome }}"
           
           if [[ "$FRONTEND_STATUS" == "success" && "$BACKEND_STATUS" == "success" ]]; then
-            echo "MESSAGE=✅ Tests passed successfully!%0ABranch: ${{ github.ref_name }}%0ACommit: ${{ github.sha }}" >> $GITHUB_ENV
+            echo "MESSAGE=✅ All tests passed successfully!%0ABranch: ${{ github.ref_name }}%0ACommit: ${{ github.sha }}" >> $GITHUB_ENV
             echo "STATUS=success" >> $GITHUB_ENV
           else
-            echo "MESSAGE=❌ Tests failed!%0ABranch: ${{ github.ref_name }}%0ACommit: ${{ github.sha }}%0AFrontend: $FRONTEND_STATUS%0ABackend: $BACKEND_STATUS" >> $GITHUB_ENV
+            echo "MESSAGE=❌ Some tests failed!%0ABranch: ${{ github.ref_name }}%0ACommit: ${{ github.sha }}%0AFrontend: $FRONTEND_STATUS%0ABackend: $BACKEND_STATUS" >> $GITHUB_ENV
             echo "STATUS=failure" >> $GITHUB_ENV
           fi
         shell: bash
 
-      # Отправляем уведомление в Telegram
-      - name: Send Telegram notification
+      # Отправляем итоговое уведомление в Telegram
+      - name: Send Telegram final notification
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
@@ -74,8 +97,9 @@ jobs:
           curl -s -X POST \
             https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id=${TELEGRAM_CHAT_ID} \
-            -d text="✅ Tests passed successfully!\nBranch: feature/test_actions\nCommit: 593ac84a2c3f2e4f9a9a7eab014977e8c3f9f974" \
+            -d text="$MESSAGE" \
             -d parse_mode="HTML"
+        shell: bash
 
     outputs:
       test_status: ${{ env.STATUS }}
@@ -91,4 +115,3 @@ jobs:
           if [ "${{ needs.test-and-notify.outputs.test_status }}" != "success" ]; then
             exit 1
           fi
-
