--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,24 +102,20 @@ jobs:
         shell: bash
 
       # Отправляем итоговое уведомление по электронной почте
-      - name: Send email notification
+      - name: Send email with test results
         uses: dawidd6/action-send-mail@v3
         with:
-          smtp-server: ${{ secrets.SMTP_SERVER }}
-          smtp-port: 587
-          smtp-user: ${{ secrets.SMTP_USER }}
-          smtp-password: ${{ secrets.SMTP_PASSWORD }}
+          server_address: ${{ secrets.SMTP_SERVER }}  # Use server_address instead of smtp-server
+          server_port: 587
+          username: ${{ secrets.SMTP_USER }}  # Use username for the SMTP user
+          password: ${{ secrets.SMTP_PASSWORD }}  # Use password for the SMTP password
           from: ${{ secrets.SMTP_USER }}
-          to: 123ababab123ababab@gmail.com
-          subject: Test Results - ${{ github.ref_name }}
+          to: ${{ secrets.EMAIL_RECIPIENT }}  # Set the recipient email address
+          subject: Test Results - feature/test_actions
           body: |
             The test results are as follows:
             $MESSAGE
-        env:
-          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
-          SMTP_PORT: ${{ secrets.SMTP_PORT }}
-          SMTP_USER: ${{ secrets.SMTP_USER }}
-          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+          secure: true  # Enable secure connection (SSL/TLS)
 
     outputs:
       test_status: ${{ env.STATUS }}
