--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,7 +106,7 @@ jobs:
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.elasticemail.com
-          server_port: 2525
+          server_port: 465
           username: ${{ secrets.SMTP_USER }}  # Ваш email, например, 123ababab123ababab@gmail.com
           password: ${{ secrets.SMTP_PASSWORD }}  # Ваш пароль, например, 85B4672943B05596B50650A86554840FBFDE
           from: ${{ secrets.SMTP_USER }}  # Тот же email, что и username
@@ -115,7 +115,7 @@ jobs:
           body: |
             The test results are as follows:
             ${{ env.MESSAGE }}  # Переменная с результатами тестов
-          secure: false  # Отключаем прямое SSL, используем STARTTLS
+          secure: true  # Отключаем прямое SSL, используем STARTTLS
 
     outputs:
       test_status: ${{ env.STATUS }}
