--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Send email with test results
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp.elasticemail.com
+          server_address: ${{ secrets.SMTP_SERVER }}
           server_port: 465
           username: ${{ secrets.SMTP_USER }}  # Ваш email, например, 123ababab123ababab@gmail.com
           password: ${{ secrets.SMTP_PASSWORD }}  # Ваш пароль, например, 85B4672943B05596B50650A86554840FBFDE
