--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Full history for commit messages
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       # Set up Python
       - name: Set up Python
