--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -89,4 +89,4 @@ jobs:
           git config user.email "action@github.com"
           git add ${{ env.NAME_VERSION_FILE }} version/version_log CHANGELOG.md
           git commit -m "Bump version to ${{ env.NEW_VERSION }} and update changelog"
-          git push
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
