--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -30,18 +30,29 @@ jobs:
         working-directory: ./frontend
         continue-on-error: true
 
-      # Label | test-passed
       - name: Add label "test-passed"
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            await github.rest.issues.addLabels({
-              issue_number: context.payload.pull_request?.number || context.payload.issue?.number,
+            const branch = context.ref.replace('refs/heads/', '');
+            const pulls = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ["test-passed"]
+              state: 'open',
+              head: `${context.repo.owner}:${branch}`
             });
+            if (pulls.data.length > 0) {
+              const pullNumber = pulls.data[0].number;
+              await github.rest.issues.addLabels({
+                issue_number: pullNumber,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                labels: ["test-passed"]
+              });
+            } else {
+              console.log("No open pull request found for branch:", branch);
+            }
 
       # Отправляем отдельное уведомление в Telegram для каждого теста
       - name: Send individual Telegram notifications for frontend tests
