--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -146,6 +146,7 @@ jobs:
   sonar-analysis:
     needs: test-and-notify
     uses: ./.github/workflows/sonar-analysis.yml
+    secrets: inherit
 
   status:
     needs: test-and-notify
