--- a/.github/workflows/sonar-project.properties
+++ b/.github/workflows/sonar-project.properties
@@ -1,10 +1,12 @@
-sonar.organization=NickNameYouTuber_messenger-app  # Замените на вашу организацию
+# SonarCloud organization
+sonar.organization=NickNameYouTuber
+# Unique project key
 sonar.projectKey=messenger-app
+# Display name
 sonar.projectName=Messenger App
-
-# Указываем исходные файлы для JS и Python
+# Source directories
 sonar.sources=frontend/src,backend/src
-sonar.language=js,py  # Явное указание языков
-
-# Исключения
-sonar.exclusions=**/node_modules/**, **/tests/**, **/venv/**
+# Languages to analyze
+sonar.languages=js,py
+# Files/directories to exclude
+sonar.exclusions=**/node_modules/**,**/tests/**,**/venv/**
