--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectKey=messenger-app
 # Display name
 sonar.projectName=Messenger App
 # Source directories
-sonar.sources=frontend/src,backend/src
+sonar.sources=frontend,backend
 # Languages to analyze
 sonar.languages=js,py
 # Files/directories to exclude
